fixed text overflow, unique key issues, empty search string issue

--- a/src/index.css
+++ b/src/index.css
@@ -184,6 +184,7 @@ form {
   margin: 10px 0px;
   width: 300px;
   height: 450px;
+  overflow-y: hidden;
 }
 
 .movie-display-tile img {
@@ -230,8 +231,10 @@ form {
 }
 
 .filler {
-  height: 100%;
+  min-width: 300px;
+  min-height: 450px;
   width: 100%;
+  height: 100%;
   background-image: linear-gradient(
     to bottom right,
     rgba(255, 0, 0, 0),
@@ -256,7 +259,7 @@ h1 {
   font-size: 2em;
 }
 #main-nav {
-  background-color: #7fbeeb !important;
+  background-color: #f8c7cc !important;
 }
 
 #main-description {
